[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fonts/MetalMania-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/PauseDisplay.gd" type="Script" id=2]
[ext_resource path="res://UI/theme.tres" type="Theme" id=3]
[ext_resource path="res://UI/SettingsDisplay.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[node name="PauseDisplay" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -492.0
margin_top = -280.0
margin_right = 532.0
margin_bottom = 320.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -180.0
margin_right = 151.0
margin_bottom = -100.0
custom_fonts/font = SubResource( 1 )
text = "Game Paused"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="."]
margin_left = -52.0
margin_right = 92.0
margin_bottom = 67.0
theme = ExtResource( 3 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="."]
margin_left = -52.0
margin_top = 80.0
margin_right = 92.0
margin_bottom = 147.0
theme = ExtResource( 3 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="."]
margin_left = -52.0
margin_top = 160.0
margin_right = 92.0
margin_bottom = 227.0
theme = ExtResource( 3 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsDisplay" parent="." instance=ExtResource( 4 )]
visible = false
margin_left = -492.0
margin_top = -280.0
margin_right = 532.0
margin_bottom = 320.0
